[package]
name = "hjpcli"
version = "0.1.0"
authors = ["Andrej Dundovic <andrej@dundovic.com.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
url = "2.2.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
html_parser = "0.6.2"
html-escape = "0.2.7"
